force-app/main/default/objects/Low_Stress_Note__c/Low_Stress_Note__c.object-meta.xml
<CustomObject>
    <label>Low Stress Note</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Low Stress Note #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Low Stress Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>