force-app/main/default/objects/Low_Stress_Note__c/fields/Animal_Exam_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Animal_Exam_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal Exam Sheet</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Animal__c</field>
            <operation>equals</operation>
            <valueField>Animal_Exam_Sheet__c.Animal__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Animal_Exam_Sheet__c</referenceTo>
    <relationshipLabel>Low Stress Notes</relationshipLabel>
    <relationshipName>Low_Stress_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>