force-app/main/default/objects/Low_Stress_Note__c/fields/Behavior_Consult_Request__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Consult_Request__c</fullName>
    <label>Behavior Consult Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Behavior Team Review</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>BST Reviewed</fullName>
                <isActive>false</isActive>
                <label>BST Reviewed</label>
            </value>
            <value>
                <fullName>Behavior Reviewed</fullName>
                <isActive>false</isActive>
                <label>Behavior Reviewed</label>
            </value>
            <value>
                <fullName>Pending BST Review</fullName>
                <isActive>false</isActive>
                <label>Pending BST Review</label>
            </value>
            <value>
                <fullName>Pending Behavior Review</fullName>
                <isActive>false</isActive>
                <label>Pending Behavior Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>