force-app/main/default/objects/Low_Stress_Note__c/fields/Behavior_Management_Tool_Other__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Management_Tool_Other__c</fullName>
    <label>Behavior Management Tool - Other</label>
    <type>TextArea</type>
</CustomField>