force-app/main/default/objects/Low_Stress_Note__c/fields/Behavior_Management_Tools__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Management_Tools__c</fullName>
    <label>Behavior Management Tools</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calming Cap</fullName>
            </value>
            <value>
                <fullName>Basket Muzzle</fullName>
            </value>
            <value>
                <fullName>Cat Mask</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>