force-app/main/default/objects/Low_Stress_Note__c/fields/Food_Notes__c.field-meta.xml
<CustomField>
    <fullName>Food_Notes__c</fullName>
    <label>Food - Notes</label>
    <type>TextArea</type>
</CustomField>