force-app/main/default/objects/Low_Stress_Note__c/fields/Likes__c.field-meta.xml
<CustomField>
    <fullName>Likes__c</fullName>
    <inlineHelpText>Prevents/alleviates stress</inlineHelpText>
    <label>Likes</label>
    <type>TextArea</type>
</CustomField>