force-app/main/default/objects/Low_Stress_Note__c/fields/Pre_Exam_Management_Interventions__c.field-meta.xml
<CustomField>
    <fullName>Pre_Exam_Management_Interventions__c</fullName>
    <label>Pre-Exam Management Interventions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analgesia</fullName>
            </value>
            <value>
                <fullName>Light Sedation</fullName>
            </value>
            <value>
                <fullName>Heavy Sedation</fullName>
            </value>
            <value>
                <fullName>Anxiolytic</fullName>
            </value>
            <value>
                <fullName>Drugs - See Medical Notes</fullName>
                <isActive>false</isActive>
                <label>Drugs - See Medical Notes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>