force-app/main/default/objects/Low_Stress_Note__c/fields/Preferred_Location_for_Exam__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Location_for_Exam__c</fullName>
    <label>Preferred Location for Exam</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Floor (no slip surface)</fullName>
            </value>
            <value>
                <fullName>Lap</fullName>
            </value>
            <value>
                <fullName>Carrier</fullName>
            </value>
            <value>
                <fullName>Table (no slip surface)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>