force-app/main/default/objects/Low_Stress_Note__c/fields/Preferred_Location_for_Exam_Other__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Location_for_Exam_Other__c</fullName>
    <label>Preferred Location for Exam - Other</label>
    <type>TextArea</type>
</CustomField>