force-app/main/default/objects/Low_Stress_Note__c/fields/Shelter_Color_Coding__c.field-meta.xml
<CustomField>
    <fullName>Shelter_Color_Coding__c</fullName>
    <label>Shelter Color Coding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Shelter_Color_Coding</valueSetName>
    </valueSet>
</CustomField>