force-app/main/default/objects/Low_Stress_Note__c/fields/Toy__c.field-meta.xml
<CustomField>
    <fullName>Toy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Toy</label>
    <type>Checkbox</type>
</CustomField>