force-app/main/default/objects/Low_Stress_Note__c/fields/Toy_Notes__c.field-meta.xml
<CustomField>
    <fullName>Toy_Notes__c</fullName>
    <label>Toy - Notes</label>
    <type>TextArea</type>
</CustomField>