force-app/main/default/objects/Low_Stress_Note__c/fields/Triggers__c.field-meta.xml
<CustomField>
    <fullName>Triggers__c</fullName>
    <inlineHelpText>Increases stress</inlineHelpText>
    <label>Triggers</label>
    <type>TextArea</type>
</CustomField>